Add test coverage related scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 config/secrets.yml
 spec/fixtures/
-coverage/*
-!coverage/.resultset.json
+spec/coverage/*
+spec/!coverage/.resultset.json
 
 # Used by dotenv library to load environment variables.
 # .env
