--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 config/secrets.yml
 spec/fixtures/
-spec/coverage/*
-spec/!coverage/.resultset.json
+coverage/*
+!coverage/.resultset.json
 
 # Used by dotenv library to load environment variables.
 # .env
