Modify rubocop things

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,5 +17,5 @@ Security/YAMLLoad:
         - spec/**/*   
 
 # allows metric length > 10
-Metrics/MethodLength:
-    Enabled: false 
+#Metrics/MethodLength:
+#    Enabled: false 
