--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ build/
 build-iPhoneOS/
 build-iPhoneSimulator/
 
+.bundle/
+
 ## Specific to RubyMotion (use of CocoaPods):
 #
 # We recommend against adding the Pods directory to your .gitignore. However
