--- a/config/app.yml
+++ b/config/app.yml
@@ -1,6 +1,8 @@
 ---
 development:
+  API_HOST: http://localhost:9292
   DB_FILENAME: app/infrastructure/database/local/dev.db
+  REPOSTORE_PATH: app/infrastructure/git/repostore
 
 test:
   DB_FILENAME: app/infrastructure/database/local/test.db
