--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -42,4 +42,5 @@ jobs:
       - name: Run all specs
         env: # define secrets in Github project -> settings -> secrets
           GMAP_TOKEN: ${{ secrets.GMAP_TOKEN }}
+          SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
         run: bundle exec rake spec
