session sectret in rack_env

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Setup test database
         run: RACK_ENV=test bundle exec rake db:migrate
+        SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
 
       - name: Run all specs
         env: # define secrets in Github project -> settings -> secrets
