session secret rake

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -37,8 +37,9 @@ jobs:
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
 
       - name: Setup test database
+        env:
+          SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
         run: RACK_ENV=test bundle exec rake db:migrate
-        SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
 
       - name: Run all specs
         env: # define secrets in Github project -> settings -> secrets
