--- a/config/app.yml
+++ b/config/app.yml
@@ -7,3 +7,6 @@ development:
 test:
   DB_FILENAME: app/infrastructure/database/local/test.db
   API_HOST: http://localhost:9292
+
+production:
+  API_HOST:  http://ewa-api.herokuapp.com/
