--- a/workers/shoryuken_dev.yml
+++ b/workers/shoryuken_dev.yml
@@ -3,3 +3,6 @@ search_queues:
 
 click_queues:
   - https://sqs.ap-northeast-1.amazonaws.com/468882986872/ewa_click_development
+
+click_create_queues:
+  - https://sqs.ap-northeast-1.amazonaws.com/468882986872/ewa_click_create_development
