--- a/workers/shoryuken_test.yml
+++ b/workers/shoryuken_test.yml
@@ -1,8 +1,2 @@
-search_queues:
-  - https://sqs.ap-northeast-1.amazonaws.com/468882986872/ewa_search_test
-
-click_queues:
-  - https://sqs.ap-northeast-1.amazonaws.com/468882986872/ewa_click_test
-
-click_create_queues:
+queues:
   - https://sqs.ap-northeast-1.amazonaws.com/468882986872/ewa_click_create_test
