--- a/workers/shoryuken.yml
+++ b/workers/shoryuken.yml
@@ -1,8 +1,2 @@
-search_queues:
-  - https://sqs.us-east-1.amazonaws.com/468882986872/ewa_search_production
-
-click_queues:
-  - https://sqs.us-east-1.amazonaws.com/468882986872/ewa_click_production
-
-click_create_queues:
+queues:
   - https://sqs.us-east-1.amazonaws.com/468882986872/ewa_click_create_production
