--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -41,8 +41,8 @@ jobs:
           SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
         run: RACK_ENV=test bundle exec rake db:migrate
 
-#      - name: Run all specs
-#        env: # define secrets in Github project -> settings -> secrets
-#          GMAP_TOKEN: ${{ secrets.GMAP_TOKEN }}
-#          SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
-#        run: bundle exec rake spec
+      - name: Run all specs
+        env: # define secrets in Github project -> settings -> secrets
+          GMAP_TOKEN: ${{ secrets.GMAP_TOKEN }}
+          SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
+        run: bundle exec rake spec
